feat: salary regression model created with ANN and hyper parameter tunning done

--- a/ANN/prediction.ipynb
+++ b/ANN/prediction.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "7819a597",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\AI ML (GEN AI)\\venv\\Lib\\site-packages\\keras\\src\\export\\tf2onnx_lib.py:8: FutureWarning: In the future `np.object` will be defined as the corresponding NumPy scalar.\n",
+      "  if not hasattr(np, \"object\"):\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import load_model\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "27329665",
    "metadata": {},
    "outputs": [
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "ccfe8b84",
    "metadata": {},
    "outputs": [],
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "ed7bb320",
    "metadata": {},
    "outputs": [
@@ -125,13 +134,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   CreditScore Geography Gender  ...  HasCrCard  IsActiveMember  EstimatedSalary\n",
-       "0          600    France   Male  ...          1               1            50000\n",
+       "   CreditScore Geography Gender  Age  Tenure  Balance  NumOfProducts  \\\n",
+       "0          600    France   Male   40       3    60000              2   \n",
        "\n",
-       "[1 rows x 10 columns]"
+       "   HasCrCard  IsActiveMember  EstimatedSalary  \n",
+       "0          1               1            50000  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "33ed5041",
    "metadata": {},
    "outputs": [
@@ -166,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "de0be7ab",
    "metadata": {},
    "outputs": [
@@ -212,7 +222,7 @@
        "0               1.0                0.0              0.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "4b97ff74",
    "metadata": {},
    "outputs": [
@@ -279,13 +289,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   CreditScore Geography  Gender  ...  HasCrCard  IsActiveMember  EstimatedSalary\n",
-       "0          600    France       1  ...          1               1            50000\n",
+       "   CreditScore Geography  Gender  Age  Tenure  Balance  NumOfProducts  \\\n",
+       "0          600    France       1   40       3    60000              2   \n",
        "\n",
-       "[1 rows x 10 columns]"
+       "   HasCrCard  IsActiveMember  EstimatedSalary  \n",
+       "0          1               1            50000  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "502a8a46",
    "metadata": {},
    "outputs": [],
@@ -309,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "e8175d7a",
    "metadata": {},
    "outputs": [
@@ -369,13 +380,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   CreditScore  Gender  ...  Geography_Germany  Geography_Spain\n",
-       "0          600       1  ...                0.0              0.0\n",
+       "   CreditScore  Gender  Age  Tenure  Balance  NumOfProducts  HasCrCard  \\\n",
+       "0          600       1   40       3    60000              2          1   \n",
        "\n",
-       "[1 rows x 12 columns]"
+       "   IsActiveMember  EstimatedSalary  Geography_France  Geography_Germany  \\\n",
+       "0               1            50000               1.0                0.0   \n",
+       "\n",
+       "   Geography_Spain  \n",
+       "0              0.0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "8662803e",
    "metadata": {},
    "outputs": [
@@ -398,7 +413,7 @@
        "        -0.57946723, -0.57638802]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "13ff9656",
    "metadata": {},
    "outputs": [
@@ -419,7 +434,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 252ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 245ms/step\n"
      ]
     }
    ],
@@ -430,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "e5b14dc7",
    "metadata": {},
    "outputs": [
@@ -440,7 +455,7 @@
        "array([[0.03556092]], dtype=float32)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "cef92e20",
    "metadata": {},
    "outputs": [],
@@ -462,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "43ca4f3e",
    "metadata": {},
    "outputs": [
@@ -472,7 +487,7 @@
        "np.float32(0.035560925)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "ab9067a6",
    "metadata": {},
    "outputs": [
@@ -502,14 +517,6 @@
     "else:\n",
     "    print(\"The customer is not likely to churn.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "163caf82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
